--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -12,26 +12,28 @@ language: English
 verticals: [Smart Cities, Environmental, Power]
 ---
 
-## Powel Bot Hack Report – March 2017
+# Powel Bot Hack Report March 2017
 
-From the 15-17th of March 2017 at Microsoft offices in Lysaker - Norway, Microsoft teamed up with Powel to create a brand-new bot called **André**. The aim of the hackfest was to create a chatbot that could assist field engineers within the space of electrical grids to answer questions and provide valuable information about the current scenario at hand. The solution was built using tools from Microsoft leveraging Chatbots and Conversation as a Platform (CaaP) technologies.
+From the 15-17th of March 2017 at Microsoft offices in Lysaker - Norway, Microsoft teamed up with Powel to create a brand-new bot called **AndrÃ©**. The aim of the hackfest was to create a chatbot that could assist field engineers within the space of electrical grids to answer questions and provide valuable information about the current scenario at hand. The solution was built using tools from Microsoft leveraging Chatbots and Conversation as a Platform (CaaP) technologies.
 
 ![Field engineer](../images/Powel/CaaP/fieldengineer.jpg)
 
 In this CaaP hackfest, we describe the process and results, including the following key technologies that were used:
--  [Microsoft Bot Framework](https://dev.botframework.com/)
--  [Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
-    - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)
-    - [Translation API](https://www.microsoft.com/cognitive-services/en-us/translator-api)
-    - [Bing Spell Check API](https://www.microsoft.com/cognitive-services/en-us/bing-spell-check-api)
+
+- [Microsoft Bot Framework](https://dev.botframework.com/)
+- [Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
+  - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)
+  - [Translation API](https://www.microsoft.com/cognitive-services/en-us/translator-api)
+  - [Bing Spell Check API](https://www.microsoft.com/cognitive-services/en-us/bing-spell-check-api)
 - [Xamarin Forms](https://www.xamarin.com/forms)
 - Text-to-speech
-    - [Bing Speech API](https://www.microsoft.com/cognitive-services/en-us/speech-api)
+  - [Bing Speech API](https://www.microsoft.com/cognitive-services/en-us/speech-api)
 - [GitHub](https://github.com/)
 - [Visual Studio Team Services](https://www.visualstudio.com/team-services/)
 - [Visual Studio 2017](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)
 
 Additionally, the team expressed a need for getting more hands-on experience with
+
 - Test Automation
 - Continuous Integration/Continuous Delivery scenarios
 
@@ -41,30 +43,30 @@ The hackfest took place after multiple calls where the problem area was demystif
 
 | Company   | Person               |Role                     |
 | -------   | -------------------- | ----------------------- |
-| Powel     | Damian Plaza          | Software Engineer         |
-|           | Jakub Hiszczyn         | Software Engineer        |
-|           | Karol Stosik 		   | Software Engineer        |
-|           | Maksymilian Jastrzebski | Software Engineer        |
-|           | Tor Hovland                      | Software Engineer        |
-|           | Simen Karlsen                 | Smart Grid-Enabler        |
-|           | Øystein Askeland             | Interaction Designer       |
-| Microsoft | Pedro Dias           | Sr.Technical Evangelist |
-|           | Anders Gill          | Technical Evangelist    |
+| Powel     | Damian Plaza  | Software Engineer         |
+|           | Jakub Hiszczyn    | Software Engineer        |
+|           | Karol Stosik  | Software Engineer        |
+|           | Maksymilian Jastrzebski   | Software Engineer        |
+|           | Tor Hovland   | Software Engineer        |
+|           | Simen Karlsen | Smart Grid-Enabler        |
+|           | Ã˜ystein Askeland  | Interaction Designer       |
+| Microsoft | Pedro Dias    | Sr.Technical Evangelist |
+|           | Anders Gill   | Technical Evangelist    |
 
 ## Solution Overview
 
-Powel envisions a future where on-site engineers can use their natural voice as the main driver for computer-assisted support during an inspection of power facilities. An inspection of an electrical station, or line inspections using André, will free up the engineers’ hands, which gives a more fluent process than having to fill out a paper form, or plot data into a device application. Utilizing the capabilities of a wearable device, such as a mobile phone, the application will automatically understand which facility is being inspected by obtaining the user’s GPS location and provide the necessary checkpoint lists and dialogs appropriate to that facility.
+Powel envisions a future where on-site engineers can use their natural voice as the main driver for computer-assisted support during an inspection of power facilities. An inspection of an electrical station, or line inspections using AndrÃ©, will free up the engineers hands, which gives a more fluent process than having to fill out a paper form, or plot data into a device application. Utilizing the capabilities of a wearable device, such as a mobile phone, the application will automatically understand which facility is being inspected by obtaining the userï¿½s GPS location and provide the necessary checkpoint lists and dialogs appropriate to that facility.
 
 The hackfest focused on two distinct inspection targets:
 
 - Power Station inspection
 - Power Line inspection
 
-The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform to enrich André as well as device similar conversational applications for use in other areas.
+The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform to enrich AndrÃ© as well as device similar conversational applications for use in other areas.
 
-We used Xamarin Forms, Microsoft Bot Framework, LUIS and Cognitive Services to develop a bot that would allow the engineer to talk to the Xamarin Forms Android app that uses the Google Speech recognition engine to transform audio into text, where the text would then be sent to LUIS that would understand a user’s intention at any point during the conversation. Based on the detected intent and entities, the Microsoft Bot Framework would yield the appropriate response back to the client app that would read the response to the engineer, helping him stay safe by keeping him hands-free.
+We used Xamarin Forms, Microsoft Bot Framework, LUIS and Cognitive Services to develop a bot that would allow the engineer to talk to the Xamarin Forms Android app that uses the Google Speech recognition engine to transform audio into text, where the text would then be sent to LUIS that would understand a user's intention at any point during the conversation. Based on the detected intent and entities, the Microsoft Bot Framework would yield the appropriate response back to the client app that would read the response to the engineer, helping him stay safe by keeping him hands-free.
 
-One feature in particular that really extends the usefulness of this bot, was the integration of the Microsoft Bot Framework to the Powel backend system. We managed to successfully integrate the bot to the relevant systems that would, for instance, allow engineers to extract valuable information using natural voice like 
+One feature in particular that really extends the usefulness of this bot, was the integration of the Microsoft Bot Framework to the Powel backend system. We managed to successfully integrate the bot to the relevant systems that would, for instance, allow engineers to extract valuable information using natural voice like:
 
 - history of inspection at specific facilities
 - specific parts prone to constant maintenance
@@ -72,7 +74,7 @@ One feature in particular that really extends the usefulness of this bot, was th
 - the quickest route to the next critical prioritized facility that needs remediation
 - provide a checklist of possible rectification methods and so on.
 
-_“Microsoft’s Bot Framework and the Cognitive Services will help us in Powel to empower our customers by making their working day simpler, safer and more efficient” – Simen Karlsen, Smart Grid-Enabler (Powel)_
+_Microsoft's Bot Framework and the Cognitive Services will help us in Powel to empower our customers by making their working day simpler, safer and more efficient_ - Simen Karlsen, Smart Grid-Enabler (Powel)
 
 ## Customer profile
 
@@ -86,11 +88,11 @@ Powel Business Segments:
 
 ## Problem statement
 
-The number one aspect that every company enforces, is the worker’s safety. Powel is no exception. There might, however, be some jobs that are more dangerous than others. Powel has some of the largest customers in Norway that maintains and develops the electrical grids. These inspections have to be done once per year for each facility. Other more in-depth technical inspections have to be done once every 10 years for all the components in the electrical grid, which is enforced by law. In order to perform an inspection, an engineer might have to climb tall masts that can create dangerous situations depending on weather and other factors. These inspections take place especially in wintertime when there is much frost on the ground that hinders the development of new grids. This forces the companies to focus on maintenance instead which is also an important job. For this reason, it would be very inconvenient to keep a cell phone or a notebook at hand when you could potentially be hanging many meters above the ground. 
+The number one aspect that every company enforces, is the workers safety. Powel is no exception. There might, however, be some jobs that are more dangerous than others. Powel has some of the largest customers in Norway that maintains and develops the electrical grids. These inspections have to be done once per year for each facility. Other more in-depth technical inspections have to be done once every 10 years for all the components in the electrical grid, which is enforced by law. In order to perform an inspection, an engineer might have to climb tall masts that can create dangerous situations depending on weather and other factors. These inspections take place especially in wintertime when there is much frost on the ground that hinders the development of new grids. This forces the companies to focus on maintenance instead which is also an important job. For this reason, it would be very inconvenient to keep a cell phone or a notebook at hand when you could potentially be hanging many meters above the ground.
 
-As a result, an engineer has to remember what to check for, what potential issues there might be if any other maintenance has ever been performed on this particular mast/station, what types of remedies that counter the issues and so on. Based on this data collected, the engineer has to travel back to the main office to hand over the information to his colleagues or to digitalize it himself. During this transit, valuable information and specific context that was gathered during the inspection could be lost. 
+As a result, an engineer has to remember what to check for, what potential issues there might be if any other maintenance has ever been performed on this particular mast/station, what types of remedies that counter the issues and so on. Based on this data collected, the engineer has to travel back to the main office to hand over the information to his colleagues or to digitalize it himself. During this transit, valuable information and specific context that was gathered during the inspection could be lost.
 
-Powel requires a solution that allows the engineers to stay hands-free while still adding value to the conversation. A chatbot that would be triggered through a simple “Hello André”, could potentially relieve the engineer of having to remember all the tasks that he is to execute during his inspection. The great thing about such a chatbot is that it could be connected to all other systems that are relevant and could provide some kind of information that the engineer needs. This was one of our goals for the hackfest – being able to provide a simple chatbot that can converse dialogues to external systems and return valuable insight that can increase efficiency during the inspection.
+Powel requires a solution that allows the engineers to stay hands-free while still adding value to the conversation. A chatbot that would be triggered through a simple "Hello AndrÃ©", could potentially relieve the engineer of having to remember all the tasks that he is to execute during his inspection. The great thing about such a chatbot is that it could be connected to all other systems that are relevant and could provide some kind of information that the engineer needs. This was one of our goals for the hackfest, being able to develop a simple chatbot that can converse dialogues to external systems and return valuable insight that can increase efficiency during the inspection.
 
 An inspection could consist of assessing facilities where data is fed back regarding what type of issue that is presently based on a checklist, to actually fixing the issues. Common issues could be woodpeckers pecking the masts or graffiti, to more serious problems like high voltage electrical components failing.
 
@@ -104,8 +106,7 @@ In summary, the chatbot will:
 ## Solution and steps
 
 The whole hackfest was initiated by Pedro who introduced the team to the Microsoft Bot Framework, showing examples of a working bot, explaining features and making sure that the whole team was up to speed before we started developing. The goal of the three-day hackfest was to create a client app in Xamarin Forms for Android that could visualize the conversation that the engineer would be having using the Microsoft Bot Framework with LUIS and the cognitive services. We created a User Story in Visual Studio Team Services (VSTS) that consisted of multiple tasks. The User Story was as following:
-
-_“As a field worker, I want to be able to submit inspections that are OK to a bot so that I don't have to fill out a form for that”_
+_As a field worker, I want to be able to submit inspections that are OK to a bot so that I don't have to fill out a form for that_
 
 We also defined Features and Tasks to make it easier to distribute work across the team. We created two repositories (one for the ASP.NET bot application, the second one for the Xamarin Forms application). We also configured Continuous Integration on the Bot Framework, so that it builds and deploys to Microsoft Azure after each commit.
 
@@ -122,10 +123,10 @@ A simple sketch of how the field engineer usually would inspect a power station:
 The following was achieved by the end of the hackfest:
 
 - Power Station inspection
-    - Checkpoint lists and dialogs appropriate to a specific facility
-    - Selection of substations
-    - Selection of discrepancy type
-    - Registration of discrepancies with comments integrated with Powel backend
+  - Checkpoint lists and dialogs appropriate to a specific facility
+  - Selection of substations
+  - Selection of discrepancy type
+  - Registration of discrepancies with comments integrated with Powel backend
 
 The following was not implemented, but scoped for during the hackfest:
 
@@ -136,7 +137,7 @@ The following was not implemented, but scoped for during the hackfest:
 
 The current PoC chatbot allows the field engineer to execute an inspection by initiating a conversation through natural voice with the Microsoft Bot Framework, ask for its capabilities, select a substation, register discrepancy of a specific type with a comment. This fulfills the feedback loop by registration on-the-fly to the Powel backend so that the field engineer no longer has to physically be present at the offices to register the same information.
 
-**Technologies used:** 
+**Technologies used:**
 
 Microsoft Bot Framework Bot Builder SDK (C#), FormFlow, LUIS, Multi-channel integration (Slack, Direct Line).
 
@@ -163,9 +164,9 @@ The team working hard:
 
 The following was worked on during day 2 of the hackfest:
 
-We finalized the Direct Connection through the use of Web Sockets (https://github.com/NVentimiglia/WebSockets.Pcl) but ended up going for HTTP instead as we couldn’t make the Portable Class Library work.
+We finalized the Direct Connection through the use of [Web Sockets](https://github.com/NVentimiglia/WebSockets.Pcl) but ended up going for HTTP instead as we couldnï¿½t make the Portable Class Library work.
 
-We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API’s.
+We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API's.
 
 We connected the mobile app to the bot and made it work. We also spent some time designing the Xamarin Forms app and making sure that the interface/user experience was good.
 
@@ -173,7 +174,7 @@ Below is a low-fidelity sketch of the interface:
 
 ![Low fidelity sketch](../images/Powel/CaaP/lowfidelity.jpg)
 
-We further worked on getting NuGet Packages from Powels core API’s (Condition Monitoring API) to be included in the build for the bot. We worked on some dialog flows plans for later implementation, and spent some more time on working with the intents and training LUIS to recognize them.
+We further worked on getting NuGet Packages from Powels core API's (Condition Monitoring API) to be included in the build for the bot. We worked on some dialog flows plans for later implementation, and spent some more time on working with the intents and training LUIS to recognize them.
 
 We spent a lot of time on the PromptDialogs as we forgot to set the dialog implementation as [Serializable].
 
@@ -188,7 +189,7 @@ We ended the day by testing the bot outside to see how it handled background noi
 
 ### Achievements Day 3
 
-Every Friday morning, Microsoft Norway hosts a gathering for the whole subsidiary, and every week there are different sharing’s from either employees or customers, sometimes even the Microsoft leadership team. The meeting gives people an opportunity to see what’s going on in the Microsoft subsidiary, and to see all the cool stuff Microsoft is able to do in the market. The current CaaP Hackfest with Powel was no exception. Therefore, for this meeting we had Powel present what we had managed to come up with during the two days of hacking. Below is a picture of Powel presenting the bot to Microsoft internally:
+Every Friday morning, Microsoft Norway hosts a gathering for the whole subsidiary, and every week there are different sharings from either employees or customers, sometimes even the Microsoft leadership team. The meeting gives people an opportunity to see what's going on in the Microsoft subsidiary, and to see all the cool stuff Microsoft is able to do in the market. The current CaaP Hackfest with Powel was no exception. Therefore, for this meeting we had Powel present what we had managed to come up with during the two days of hacking. Below is a picture of Powel presenting the bot to Microsoft internally:
 
 ![Presentation](../images/Powel/CaaP/presentation.jpg)
 
@@ -196,18 +197,18 @@ The presentation proved to be very useful as many Microsoft employees commented 
 
 The final part of the hackfest was used on setting up build automation for the Xamarin Forms project, as well as finding possibilities for making a conversation that flows through different Dialogs.
 
-The following is the final flow of the PoC chatbot (sadly, we didn’t manage to implement text translation because of time constraints, but have included the part in the flow image below):
+The following is the final flow of the PoC chatbot (sadly, we did not manage to implement text translation because of time constraints, but have included the part in the flow image below):
 
 ![Flow image](../images/Powel/CaaP/flow.png)
 
-**Use case:** A field worker talks to André (the mobile app) in his natural language, the speech is transformed into text by the Google speech recognition engine and returned to the mobile app, the app then sends the text for translation and receives a fully translated text in return. The app then continues to pass the translated text to LUIS which captures the intent and entities and sends the response back to the mobile app. The mobile app sends the detected intent and entities including the field worker ID to the Microsoft Bot Framework which communicates based on a request to the Powel backend. The appropriate response is then sent back to the mobile app which translates the text into the field worker’s language and talks back to the worker.
+**Use case:** A field worker talks to AndrÃ© (the mobile app) in his natural language, the speech is transformed into text by the Google speech recognition engine and returned to the mobile app, the app then sends the text for translation and receives a fully translated text in return. The app then continues to pass the translated text to LUIS which captures the intent and entities and sends the response back to the mobile app. The mobile app sends the detected intent and entities including the field worker ID to the Microsoft Bot Framework which communicates based on a request to the Powel backend. The appropriate response is then sent back to the mobile app which translates the text into the field workers language and talks back to the worker.
 
 ### Handling dialogs
 
-In the Microsoft Bot Framework, a dialog works as the “brains” of the chatbot.
+In the Microsoft Bot Framework, a dialog works as the "brains" of the chatbot.
 A dialog provides a couple of neat features that manages the state of the conversation and session management, as well as persistence that relies on an implementation of an interface called **IDialog**. This interface manages the state transition using the **IDialogContext**. These principals have been included in the way we worked with the bot during the hackfest and plays an integral part of the bot in order for it to steer a conversation using the underlying stack where it saves data to the session object that can be accessed throughout the course of the conversation.
 
-An example of this is when LUIS acknowledges the user’s intent to be happy, the bot framework will proceed to that particular method with the intent and respond with the appropriate response:
+An example of this is when LUIS acknowledges the users intent to be happy, the bot framework will proceed to that particular method with the intent and respond with the appropriate response:
 
    ```csharp
         [LuisIntent("happy")]
@@ -216,7 +217,9 @@ An example of this is when LUIS acknowledges the user’s intent to be happy, the 
             await context.PostAsync("That's so kind of you!");
             context.Wait(MessageReceived);
         }
+
 ````
+
 Another example is when LUIS acknowledges that the user wants to select a substation:
 
    ```csharp
@@ -252,23 +255,24 @@ More complex dialogs were also developed where the bot framework communicates wi
             }
             else
             {
-                
+
                 DiscrepancyTypeService discrepancyService = new DiscrepancyTypeService(new DiscrepancyTypeRepository(new InspectionRepository(new AssetRepository()), new AssetRepository()));
                 AssetService assetService = new AssetService(new AssetRepository());
                 InspectionService inspectionService = new InspectionService(new InspectionRepository(new AssetRepository()));
                 var asset = await assetService.GetByName(substationName);
                 var inspection = await inspectionService.GetNotPerformedByAssetId(asset.ObjectId);
                 var discrepancyTypes = await discrepancyService.Get(asset.ObjectId, inspection.Id);
-       
+
                 await context.PostAsync($"You have your discrepancy types here:\n {JsonConvert.SerializeObject(discrepancyTypes)}");
                 context.Wait(MessageReceived);
             }
         }
+
 ````
 
 #### Prompt dialog
 
-The Microsoft Bot Framework comes with a number of built-in prompts that can be used to collect input from a user. This type of a prompt was used throughout the bot project, such as when André asks the field engineer if he is satisfied with the inspection and wants to finish. This is again based on the recognition of a LUIS intent of **assetAllGood**:
+The Microsoft Bot Framework comes with a number of built-in prompts that can be used to collect input from a user. This type of a prompt was used throughout the bot project, such as when AndrÃ© asks the field engineer if he is satisfied with the inspection and wants to finish. This is again based on the recognition of a LUIS intent of **assetAllGood**:
 
    ```csharp
          [LuisIntent("assetAllGood")]
@@ -286,21 +290,21 @@ The Microsoft Bot Framework comes with a number of built-in prompts that can be 
             }
         }
 ````
+
 In the scenario above, the field engineer is asked to confirm with either **Yes** or **No** (by either tapping the appropriate button or using natural voice to respond), but there are many other types of data collection inputs that can be chosen:
 
 | Prompt Type   | Description               |
 | -------   | -------------------- |
-| Prompts.text     | Asks the user to enter a string of text.          | 
-| Prompts.confirm     | Asks the user to confirm an action.          | 
-| Prompts.number     | Asks the user to enter a number.          | 
-| Prompts.time     | Asks the user for a time or date.         | 
-| Prompts.choice     | Asks the user to choose from a list of choices.         | 
-| Prompts.attachment     | sks the user to upload a picture or video.         | 
+| Prompts.text     | Asks the user to enter a string of text. |
+| Prompts.confirm     | Asks the user to confirm an action. |
+| Prompts.number     | Asks the user to enter a number. |
+| Prompts.time     | Asks the user for a time or date. |
+| Prompts.choice     | Asks the user to choose from a list of choices. |
+| Prompts.attachment     | sks the user to upload a picture or video. |
 
 #### FormFlow
 
 As we have seen, dialogs work as a powerful mechanism to guide a conversation, but these can get pretty comprehensive when there are many small pieces to the puzzle; like ordering a sandwich for instance. To simplify a guided conversation, the bot framework offers a much easier way of building a dialog called **FormFlow**. A FormFlow dialog guides the user through filling in the form while providing help and guidance along the way. The form dialog was used when the field engineer has to submit a discrepancy where he has to fill in the remaining fields which include the type of discrepancy and the comment.
-
 
    ```csharp
 [Serializable]
@@ -335,7 +339,7 @@ We managed to set up the slack integration by registering the bot in the dev.bot
 
 ### Bot communication
 
-The Direct Line API is a simple REST API for connecting directly to the bot. The main purpose of this API is to let developers connect custom agents to the bot in order to converse conversations. As mentioned during earlier, we initially set out to implement the connectivity through web sockets in the mobile app developed in Xamarin Forms but decided to go for HTTP as we couldn’t make the Portable Class Library work. The following code shows a simple send-task:
+The Direct Line API is a simple REST API for connecting directly to the bot. The main purpose of this API is to let developers connect custom agents to the bot in order to converse conversations. As mentioned during earlier, we initially set out to implement the connectivity through web sockets in the mobile app developed in Xamarin Forms but decided to go for HTTP as we couldnï¿½t make the Portable Class Library work. The following code shows a simple send-task:
 
    ```csharp
         public async Task Send<T>(T item)
@@ -352,7 +356,7 @@ The Direct Line API is a simple REST API for connecting directly to the bot. The
 
 ### Other measures implemented
 
-In the Microsoft Bot framework, you have to directly provide the BotId, MicrosoftAppId, and MicrosoftAppPassword in the Web.config-file in order to set the appropriate app settings. Because of security issues, we did not want to do this. In order to provide the settings in a more secure way, we got the settings values from the CloudConfigurationManager or by a local JSON file that has the bot settings.  
+In the Microsoft Bot framework, you have to directly provide the BotId, MicrosoftAppId, and MicrosoftAppPassword in the Web.config-file in order to set the appropriate app settings. Because of security issues, we did not want to do this. In order to provide the settings in a more secure way, we got the settings values from the CloudConfigurationManager or by a local JSON file that has the bot settings.
 
 We wrote the following code for the settings reader:
 
@@ -406,19 +410,19 @@ This allows us to create a new LuisModelAttribute where we pass the appId and th
         }
 ````
 
-As there is too much code to display and explain in this report, please find all the source code for the hackfest in the following [GitHub repository](https://github.com/readyforchaos/Powel-power-station-inspection-bot). 
+As there is too much code to display and explain in this report, please find all the source code for the hackfest in the following [GitHub repository](https://github.com/readyforchaos/Powel-power-station-inspection-bot).
 
 ### Agent UI
 
-The following gif shows the client mobile app on the left developed in Xamarin Forms, and the Powel Condition Monitoring app on the right displaying the status of a power station. 
+The following gif shows the client mobile app on the left developed in Xamarin Forms, and the Powel Condition Monitoring app on the right displaying the status of a power station.
 
 ![Agent UI](../images/Powel/CaaP/poweldemogif.gif)
 
 ## Conclusion
 
-The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies that could increase efficiency and add value for the field engineers assessing the electrical power grid in Norway. The hackfest situated in Microsoft offices in Norway yielded much excitement not only within the DX Team but also throughout other segments in the subsidiary. 
+The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies that could increase efficiency and add value for the field engineers assessing the electrical power grid in Norway. The hackfest situated in Microsoft offices in Norway yielded much excitement not only within the DX Team but also throughout other segments in the subsidiary.
 
-The concept of having all the information within the Powel backend accessible through natural speech within an app, not only increases the efficiency of the field engineer but also empowers the engineer to make better decisions based on knowledge he can now extract through the app. Being able to register discrepancies on-the-fly, allows the engineers to stay paperless while conducting inspections so that he doesn’t have to return to the office to digitalize the findings afterward. This feature itself decreases the potential loss of information that might occur when the engineer is in transit from finishing the inspection, to actually digitalizing the findings.
+The concept of having all the information within the Powel backend accessible through natural speech within an app, not only increases the efficiency of the field engineer but also empowers the engineer to make better decisions based on knowledge he can now extract through the app. Being able to register discrepancies on-the-fly, allows the engineers to stay paperless while conducting inspections so that he does not have to return to the office to digitalize the findings afterward. This feature itself decreases the potential loss of information that might occur when the engineer is in transit from finishing the inspection, to actually digitalizing the findings.
 
 ### General lessons
 
@@ -438,15 +442,15 @@ It turned out that we did not manage to include all the features that we scoped 
 
 - Text translation
 - Upload image from client app
-- Triggering of “André” for voice activation based on natural voice instead of a button 
+- Triggering of "AndrÃ©" for voice activation based on natural voice instead of a button
 
 This is something that Powel will continue to integrate into the next development phase of the chatbot.
 
 ### Going forward
 
-The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework – to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment. 
+The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment.
 
-_“The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft – an experience we can bring into our customer conversations across the domains within Powel.” – Øystein Askeland, Interaction Designer (Powel)_
+_The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel"_ - Ã˜ystein Askeland, Interaction Designer (Powel)
 
 Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
 
