--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -450,7 +450,7 @@ This is something that Powel will continue to integrate into the next developmen
 
 The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment.
 
-_The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel"_ - Øystein Askeland, Interaction Designer (Powel)
+_The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel_. Øystein Askeland, Interaction Designer (Powel)
 
 Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
 
